recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:13: error: Unit does not take parameters
		square()
                      ^